# confluent-azure-openid-playground

./: .gitignore  README.adoc  README.md
java/: settings.gradle.kts
java/buildSrc/src/main/kotlin/: io.confluent.oidc.azure.example.java-application-conventions.gradle.kts  io.confluent.oidc.azure.example.java-common-conventions.gradle.kts  io.confluent.oidc.azure.example.java-library-conventions.gradle.kts  java-application-conventions.gradle.kts  java-common-conventions.gradle.kts  java-library-conventions.gradle.kts  kafka-java-conventions.gradle.kts
java/config/: oidc-client.properties.template
java/identityprovider/: build.gradle.kts
java/identityprovider/src/main/java/io/confluent/oidc/azure/example/identityprovider/: AzureIdentityProvider.java  IIdentityProvider.java
java/listenvironments/: build.gradle.kts
java/producer-oauth-auto-pool-mapping/: build.gradle.kts
java/producer-oauth-auto-pool-mapping/src/main/resources/: log4j2.xml
python/: README.md  config-template.yaml  example-config.yaml  pyproject.toml  standard-kafka-client-config-template.yaml
python/src/: azure_fetch_and_show_access_token.py  azure_fetch_and_show_access_token_with_client_id.py  ccloud_auth_provider_azure.py  ccloud_auth_provider_base.py  ccloud_base.py  ccloud_consume_from_topic.py  ccloud_list_clusters_of_environment.py  ccloud_list_environments.py  ccloud_list_topics_of_cluster.py  ccloud_produce_to_topic.py  ccloud_standard_kafka_consumer.py  ccloud_standard_kafka_producer.py  ccloud_util.py  decode_jwt.py
(+9 files in other folders)
